--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "homepage": "https://avelasco920.github.io/Market-Finance-Inc/",
   "scripts": {
-    "start": "webpack --watch"
+    "start": "webpack --watch",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "keywords": [],
   "author": "",
