fixed package json homepage to host on github

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "MarketFinance",
   "version": "1.0.0",
   "main": "index.js",
-  "homepage": "https://avelasco920.github.io/Market-Finance-Inc/",
+  "homepage": ".",
   "scripts": {
     "start": "webpack --watch",
     "deploy": "npm run build&&gh-pages -d build"
